--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@types/node": "^16.18.58",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.51.0",
+    "eslint-plugin-react": "^7.33.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
